Se agrega nueva estructura y funcion de agregar productos

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Bienvenido a Fazbear Entertainment</h1>
+    </header>
+    <section>
+        <div class="administracion" id="administracion">
+            <form id="miFormulario">
+                <label for="nombre">Nombre del animatronico:</label>
+                <input type="text" id="nombre" name="nombre" required>
+                <label for="precio">Precio del animatronico:</label>
+                <input type="number" min="1" id="precio" name="precio" required>
+                <label for="stock">Stock del animatronico:</label>
+                <input type="number" min="1" id="stock" name="stock" required>
+                <button type="submit" onclick="agregarAnimatronico()">Agregar animatronico</button>
+            </form>
+        </div>
+        <h2>Animatronicos</h2>
+        <div id="animatronicos">
+
+        </div>
+    </section>
+    <footer>
+        <p>Fazbear Entertainment © 2023. Todos los derechos reservados.</p>
+    </footer>
     <script src="./js/venta.js"></script>
 </body>
 </html>
