Se agrega ver carrito de compras

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <section>
         <div class="administracion" id="administracion">
+            <h2>Administracion - Agregar productos</h2>
             <form id="miFormulario">
                 <label for="nombre">Nombre del animatronico:</label>
                 <input type="text" id="nombre" name="nombre" required>
@@ -24,6 +25,10 @@
         </div>
         <h2>Animatronicos</h2>
         <div id="animatronicos">
+
+        </div>
+        <button onclick="mostrarCarrito()">Mostrar carrito</button>
+        <div id="carrito">
 
         </div>
     </section>
